[main] fix default image alignment to center

--- a/src/editor/blocks/image/styles/style.scss
+++ b/src/editor/blocks/image/styles/style.scss
@@ -3,6 +3,7 @@
 
     .guten-image-wrapper {
         display: flex;
+        justify-content: center;
     }
 
     .guten-caption {
